--- a/GameData/MEVHeavyIndustries/DaedalusDrive/DaedalusDrive.cfg
+++ b/GameData/MEVHeavyIndustries/DaedalusDrive/DaedalusDrive.cfg
@@ -132,7 +132,8 @@ PART
         atmosphereCurve 
 		{
             key = 0 1500000
-            key = 0.0001 0
+            key = 0.9 1200000
+			key = 0.5 100
         }
     }
     RESOURCE 
