--- a/GameData/MEVHeavyIndustries/Parts/DaedalusDrive.cfg
+++ b/GameData/MEVHeavyIndustries/Parts/DaedalusDrive.cfg
@@ -1,152 +1,182 @@
 PART 
 {
-    name = DaedalusDrive
-    module = Part
-    author = Cyne
-    scale = 1
-    rescaleFactor = 1
-    mesh = DaedalusDrive.mu
-    TechRequired = nuclearPropulsion
-    entryCost = 12000000
-    cost = 6000000
-    category = Engine
-    subcategory = 0
-    title = Daedalus Drive
-    manufacturer = MEV FusionTek
-    description = The Daedalus drive is a fusion engine that compresses and fuses pellets of Deuterium helium-3 for propulsion. It is highly efficent and is meant to be used to propel your ships towards other stars.
-    attachRules = 1,1,1,1,0
-    mass = 20
-    dragModelType = default
-    maximum_drag = 0.2
-    minimum_drag = 0.2
-    angularDrag = 2
-    crashTolerance = 10
-    breakingForce = 1500
-    breakingTorque = 1500
-    maxTemp = 2000
-    heatConductivity = 0.01
-    emissiveConstant = 0.95
-    bulkheadProfiles = srf, size4
-    EFFECTS 
+	name = DaedalusDrive
+	module = Part
+	author = Cyne and zer0Kerbal
+	
+	// mesh = DaedalusDrive.mu
+	MODEL
 	{
-        running_closed 
-		{
-            AUDIO 
-			{
-                channel = Ship
-                clip = sound_rocket_hard
-                volume = 0.0 0.0
-                volume = 0.05 0.6
-                volume = 1.0 1.5
-                pitch = 0.0 1.2
-                pitch = 1.0 2.0
-                loop = true
-            }
-            MODEL_MULTI_PARTICLE:NEEDS[!WarpPlugin]
-			{
-                modelName = Squad/FX/ksX_Exhaust
-                transformName = thrustTransform
-                emission = 0.0 0.0
-                emission = 0.1 0.5
-                emission = 1.0 1.0
-                speed = 0.0 0.8
-                speed = 1.0 1.0
-                localPosition = 0, 0, 0.08
-            }
-            MODEL_MULTI_PARTICLE
-			{
-                name = plume
-                modelName = WarpPlugin/FX/fusionplume
-                transformName = thrustTransform
-                emission = 0.0 0.0
-                emission = 0.01 0.1
-                emission = 0.075 0.25
-                emission = 1.0 1.0
-                speed = 0.0 2
-                speed = 1.0 2
-                localPosition = 0, 0, 2
-            }
-            MODEL_MULTI_PARTICLE
-			{
-                name = Glow
-                modelName = WarpPlugin/FX/GCRHalo
-                transformName = thrustTransform
-                emission = 0.0 1
-                emission = 1.0 2
-                speed = 0 -0.5
-                speed = 1 -0.5
-                energy = 0 1
-                energy = 1 2
-                localPosition = 0, 0, 2
-            }
-        }
-        engage 
-		{
-            AUDIO 
-			{
-                channel = Ship
-                clip = sound_vent_soft
-                volume = 1.0
-                pitch = 2.0
-                loop = false
-            }
-        }
-        flameout 
-		{
-            PREFAB_PARTICLE 
-			{
-                prefabName = fx_exhaustSparks_flameout_2
-                transformName = thrustTransform
-                oneShot = true
-            }
-            AUDIO 
-			{
-                channel = Ship
-                clip = sound_explosion_low
-                volume = 1.0
-                pitch = 2.0
-                loop = false
-            }
-        }
-    }
-    MODULE 
+		model = MEVHeavyIndustries/Assets/BussardFusion
+	}
+	scale = 1.0
+	rescaleFactor = 1.0
+	bulkheadProfiles = srf, size4
+
+	attachRules = 1,1,1,1,0
+
+	TechRequired = nuclearPropulsion
+	entryCost = 12000000
+	cost = 6000000
+	category = Engine
+	subcategory = 0
+
+	title = Daedalus Drive
+	manufacturer = MEV FusionTek
+	description = The Daedalus drive is a fusion engine that compresses and fuses pellets of Deuterium helium-3 for propulsion. It is highly efficent and is meant to be used to propel your ships towards other stars.
+
+	mass = 20
+
+	dragModelType = default
+	maximum_drag = 0.2
+	minimum_drag = 0.2
+	angularDrag = 2
+
+	crashTolerance = 10
+	breakingForce = 1500
+	breakingTorque = 1500
+
+	maxTemp = 2000
+	heatConductivity = 0.01
+	emissiveConstant = 0.95
+
+	EFFECTS 
 	{
-        name = ModuleEnginesFX
+		running_closed 
+		{
+			AUDIO 
+			{
+				channel = Ship
+				clip = sound_rocket_hard
+				volume = 0.0 0.0
+				volume = 0.05 0.6
+				volume = 1.0 1.5
+				pitch = 0.0 1.2
+				pitch = 1.0 2.0
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE:NEEDS[!WarpPlugin]
+			{
+				modelName = Squad/FX/ksX_Exhaust
+				transformName = thrustTransform
+				emission = 0.0 0.0
+				emission = 0.1 0.5
+				emission = 1.0 1.0
+				speed = 0.0 0.8
+				speed = 1.0 1.0
+				localPosition = 0, 0, 0.08
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				name = plume
+				modelName = WarpPlugin/FX/fusionplume
+				transformName = thrustTransform
+				emission = 0.0 0.0
+				emission = 0.01 0.1
+				emission = 0.075 0.25
+				emission = 1.0 1.0
+				speed = 0.0 2
+				speed = 1.0 2
+				localPosition = 0, 0, 2
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				name = Glow
+				modelName = WarpPlugin/FX/GCRHalo
+				transformName = thrustTransform
+				emission = 0.0 1
+				emission = 1.0 2
+				speed = 0 -0.5
+				speed = 1 -0.5
+				energy = 0 1
+				energy = 1 2
+				localPosition = 0, 0, 2
+			}
+		}
+		engage 
+		{
+			AUDIO 
+			{
+				channel = Ship
+				clip = sound_vent_soft
+				volume = 1.0
+				pitch = 2.0
+				loop = false
+			}
+		}
+		flameout 
+		{
+			PREFAB_PARTICLE 
+			{
+				prefabName = fx_exhaustSparks_flameout_2
+				transformName = thrustTransform
+				oneShot = true
+			}
+			AUDIO 
+			{
+				channel = Ship
+				clip = sound_explosion_low
+				volume = 1.0
+				pitch = 2.0
+				loop = false
+			}
+		}
+	}
+
+	MODULE 
+	{
+		name = ModuleEnginesFX
 		runningEffectName = running_closed
-        thrustVectorTransformName = thrustTransform
-        exhaustDamage = True
-        ignitionThreshold = 0.1
-        minThrust = 0
-        maxThrust = 7540
-        heatProduction = 200
-        fxOffset = 0, 0, 1
-        exhaustDamageMaxRange = 1000
-        exhaustDamageMultiplier = 1000
-        exhaustDamageMaxMutliplier = 1000
-        PROPELLANT 
+		thrustVectorTransformName = thrustTransform
+		exhaustDamage = True
+		ignitionThreshold = 0.1
+		minThrust = 0
+		maxThrust = 7540
+		heatProduction = 200
+		fxOffset = 0, 0, 1
+		exhaustDamageMaxRange = 1000
+		exhaustDamageMultiplier = 1000
+		exhaustDamageMaxMutliplier = 1000
+		PROPELLANT 
 		{
-            name = FusionPellets
-            ratio = 1
-            DrawGauge = True
-        }
-        atmosphereCurve 
+			name = FusionPellets
+			ratio = 1
+			DrawGauge = True
+		}
+		atmosphereCurve 
 		{
-            key = 0 1500000
+			key = 0 1500000
 			key = 1 100
-        }
-    }
-    RESOURCE 
+		}
+	}
+
+	MODULE 
 	{
-        name = ElectricCharge
-        amount = 1000
-        maxAmount = 1000
-    }
-    RESOURCE 
+		name = ModuleDataTransmitter
+		antennaType = RELAY
+		packetInterval = 0.1
+		packetSize = 1
+		packetResourceCost = 200
+		requiredResource = ElectricCharge
+		DeployFxModules = 0
+		antennaPower = 4.0e+13
+		antennaCombinable = False
+	}
+
+	RESOURCE 
 	{
-        name = FusionPellets
-        amount = 1000
-        maxAmount = 1000
-    }
+		name = ElectricCharge
+		amount = 1000
+		maxAmount = 1000
+	}
+
+	RESOURCE 
+	{
+		name = FusionPellets
+		amount = 1000
+		maxAmount = 1000
+	}
+
 	RESOURCE
 	{
 		name = LqdHe3
@@ -160,25 +190,15 @@ PART
 		amount = 195
 		maxAmount = 195
 	}
-    RESOURCE 
+
+	RESOURCE 
 	{
-        name = Megajoules
-        amount = 200
-        maxAmount = 200
-        isTweakable = true
-    }
-    MODULE 
-	{
-        name = ModuleDataTransmitter
-        antennaType = RELAY
-        packetInterval = 0.1
-        packetSize = 1
-        packetResourceCost = 200
-        requiredResource = ElectricCharge
-        DeployFxModules = 0
-        antennaPower = 4.0e+13
-        antennaCombinable = False
-    }
+		name = Megajoules
+		amount = 200
+		maxAmount = 200
+		isTweakable = true
+	}
+
 	MODULE
 	{
 		name = ModulePartVariants
@@ -232,6 +252,7 @@ PART
 			}
 		}
 	}
+
 	MODULE
 	{
 		name = ModuleResourceConverter
@@ -265,22 +286,23 @@ PART
 			FlowMode = STAGE_PRIORITY_FLOW
 		}
 	}
-    NODE 
+
+	NODE 
 	{
-        name = top
-        transform = node_stack_top
-        size = 4
-        method = FIXED_JOINT
-        crossfeed = True
-        rigid = False
-    }
-    NODE 
+		name = top
+		transform = node_stack_top
+		size = 4
+		method = FIXED_JOINT
+		crossfeed = True
+		rigid = False
+	}
+	NODE 
 	{
-        name = bottom
-        transform = node_stack_bottom
-        size = 4
-        method = FIXED_JOINT
-        crossfeed = True
-        rigid = False
-    }
+		name = bottom
+		transform = node_stack_bottom
+		size = 4
+		method = FIXED_JOINT
+		crossfeed = True
+		rigid = False
+	}
 }
