--- a/GameData/MEVHeavyIndustries/Config/ghostparts.cfg
+++ b/GameData/MEVHeavyIndustries/Config/ghostparts.cfg
@@ -7,9 +7,9 @@
 
 // creates duplicate part to prevent save game issues because of a part name change
 
-+PART[hlwn-kraken*]:NEEDS[MEVHeavyIndustries]:LAST[MEVHeavyIndustries]
++PART[mev-*]:NEEDS[MEVHeavyIndustries]:LAST[MEVHeavyIndustries]
 {
-	@name ^= :hlwn-kraken:halloweenkraken:
+	@name ^= :mev-::
 	!TechRequired = DELETE
 	!entryCost = DELETE
 	@category = -1
