--- a/GameData/MEVHeavyIndustries/Agencies/Agents.cfg
+++ b/GameData/MEVHeavyIndustries/Agencies/Agents.cfg
@@ -8,8 +8,8 @@
 AGENT
 {
   name = MEVFusionTek
-	title = MEVFusionTek
-	description = #IRK-Agency-desc
+	title = #MEV-Agency-titl
+	description = #MEV-Agency-desc
   
   logoURL = MEVHeavyIndustires/Flags/MEV
   logoScaledURL = MEVHeavyIndustires/Agencies/MEV_scaled
