--- a/GameData/MEVHeavyIndustries/Parts/mev-BussardFusion.cfg
+++ b/GameData/MEVHeavyIndustries/Parts/mev-BussardFusion.cfg
@@ -29,9 +29,10 @@ PART
 	category = Engine
 	subcategory = 0
 
-	title = Bussard Drive
-	manufacturer = MEV FusionTek
-	description = The Bussard Drive is an engine that utilises pellets of solid Hydrogen as fusion fuel, thus making it more efficent then the Daedalus which makes it the most efficent engine for interstellar travel
+	title = #MEV-BussardFusion-titl
+	manufacturer = #MEV-Agency-titl
+	description = #MEV-BussardFusion-desc
+	tags = #MEV-BussardFusion-tags
 
 	mass = 15
 
