--- a/GameData/MEVHeavyIndustries/Parts/mev-DaedalusDrive.cfg
+++ b/GameData/MEVHeavyIndustries/Parts/mev-DaedalusDrive.cfg
@@ -29,9 +29,10 @@ PART
 	category = Engine
 	subcategory = 0
 
-	title = Daedalus Drive
-	manufacturer = MEV FusionTek
-	description = The Daedalus drive is a fusion engine that compresses and fuses pellets of Deuterium helium-3 for propulsion. It is highly efficent and is meant to be used to propel your ships towards other stars.
+	title = #MEV-DaedalusDrive-titl
+	manufacturer = #MEV-Agency-titl
+	description = #MEV-DaedalusDrive-desc
+	tags = #MEV-DaedalusDrive-tags
 
 	mass = 20
 
