--- a/GameData/MEVHeavyIndustries/Parts/mev-EpsteinDrive.cfg
+++ b/GameData/MEVHeavyIndustries/Parts/mev-EpsteinDrive.cfg
@@ -29,9 +29,10 @@ PART
 	category = Engine
 	subcategory = 0
 
-	title = Epstein Drive
-	manufacturer = MEV FusionTek
-	description = An incredibly advanced engine with a fuel system too complex for you to understand, this Epstein Drive is going to take you anywhere with a bone-crushing acceleration. Warranty void if you black out from the acceleration.
+	title = #MEV-EpsteinDrive-titl
+	manufacturer = #MEV-Agency-titl
+	description = #MEV-EpsteinDrive-desc
+	tags = #MEV-EpsteinDrive-tags
 
 	mass = 10.0
 
