--- a/GameData/MEVHeavyIndustries/Parts/mev-EpsteinDriveV4.cfg
+++ b/GameData/MEVHeavyIndustries/Parts/mev-EpsteinDriveV4.cfg
@@ -29,9 +29,10 @@ PART
 	category = Engine
 	subcategory = 0
 
-	title = Smaller Epstein Drive 
-	manufacturer = MEV FusionTek
-	description = A smaller version of our Epstein Drive.
+	title = #MEV-EpsteinDriveV4-titl
+	manufacturer = #MEV-Agency-titl
+	description = #MEV-EpsteinDriveV4-desc
+	tags = #MEV-EpsteinDriveV4-tags
 
 	mass = 5.0
 
