--- a/GameData/MEVHeavyIndustries/Parts/mev-BussardFusion.cfg
+++ b/GameData/MEVHeavyIndustries/Parts/mev-BussardFusion.cfg
@@ -32,7 +32,7 @@ PART
 	title = #MEV-BussardFusion-titl
 	manufacturer = #MEV-Agency-titl
 	description = #MEV-BussardFusion-desc
-	tags = #MEV-BussardFusion-tags
+	tags = #autoLOC_500438 // active atom efficient engine inter liquid (nerv nuclear nuke orbit propuls radio reactor vacuum
 
 	mass = 15
 
