--- a/GameData/MEVHeavyIndustries/Parts/mev-DaedalusDrive.cfg
+++ b/GameData/MEVHeavyIndustries/Parts/mev-DaedalusDrive.cfg
@@ -32,7 +32,7 @@ PART
 	title = #MEV-DaedalusDrive-titl
 	manufacturer = #MEV-Agency-titl
 	description = #MEV-DaedalusDrive-desc
-	tags = #MEV-DaedalusDrive-tags
+	tags = #autoLOC_500438 // active atom efficient engine inter liquid (nerv nuclear nuke orbit propuls radio reactor vacuum
 
 	mass = 20
 
