--- a/GameData/MEVHeavyIndustries/Parts/mev-EpsteinDrive.cfg
+++ b/GameData/MEVHeavyIndustries/Parts/mev-EpsteinDrive.cfg
@@ -32,7 +32,7 @@ PART
 	title = #MEV-EpsteinDrive-titl
 	manufacturer = #MEV-Agency-titl
 	description = #MEV-EpsteinDrive-desc
-	tags = #MEV-EpsteinDrive-tags
+	tags = #autoLOC_500438 // active atom efficient engine inter liquid (nerv nuclear nuke orbit propuls radio reactor vacuum
 
 	mass = 10.0
 
