--- a/GameData/MEVHeavyIndustries/Parts/mev-EpsteinDriveV4.cfg
+++ b/GameData/MEVHeavyIndustries/Parts/mev-EpsteinDriveV4.cfg
@@ -32,7 +32,7 @@ PART
 	title = #MEV-EpsteinDriveV4-titl
 	manufacturer = #MEV-Agency-titl
 	description = #MEV-EpsteinDriveV4-desc
-	tags = #MEV-EpsteinDriveV4-tags
+	tags = #autoLOC_500438 // active atom efficient engine inter liquid (nerv nuclear nuke orbit propuls radio reactor vacuum
 
 	mass = 5.0
 
