--- a/GameData/MEVHeavyIndustries/Localization/en-us.cfg
+++ b/GameData/MEVHeavyIndustries/Localization/en-us.cfg
@@ -26,8 +26,27 @@ Localization
 
 		#MEV-EpsteinDrive-titl = Epstein Drive
 		#MEV-EpsteinDrive-desc = An incredibly advanced engine with a fuel system too complex for you to understand, this Epstein Drive is going to take you anywhere with a bone-crushing acceleration. Warranty void if you black out from the acceleration.
+		#MEV-EpsteinDrive-MME-primary-name = Mode: LiquidFuel
+		#MEV-EpsteinDrive-MME-secondary-name = Mode: Overdrive
 
-		#MEV-EpsteinDriveV4-titl = Smaller Epstein Drive
+		#MEV-EpsteinDriveV4-titl = Epstein Drive (smaller)
 		#MEV-EpsteinDriveV4-desc = A smaller version of our Epstein Drive.
+		#MEV-EpsteinDriveV4-MME-primary-name = Mode: Cruise
+		#MEV-EpsteinDriveV4-MME-secondary-name = Mode: Overdrive
+
+	// Variant names
+		#MEV-variant-1 = Truss Variant 1
+		#MEV-variant-2 = Truss Variant 2
+		#MEV-variant-3 = Truss Variant 3
+		#MEV-variant-4 = No Truss
+
+		#MEV-variant-5 = No Boattail
+		#MEV-variant-6 = Boattail
+		#MEV-variant-7 = Blank
+		
+	// Actions
+		#MEV-converter-name = FusionPellets Creator
+		#MEV-converter-strt = Start FusionPellets manufacturing
+		#MEV-converter-stop = Stop FusionPellets manufacturing
 	}
 }
