--- a/GameData/MEVHeavyIndustries/Parts/mev-BussardFusion.cfg
+++ b/GameData/MEVHeavyIndustries/Parts/mev-BussardFusion.cfg
@@ -193,6 +193,12 @@ PART
 		isTweakable = true
 	}
 
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = -1
+	}
+
 	MODULE 
 	{
 		name = ModulePartVariants
@@ -200,8 +206,8 @@ PART
 		VARIANT 
 		{
 			name = truss 1
-			displayName = Truss Variant 1
-			primaryColor = #cecece
+			displayName = #MEV-variant-1 // Truss Variant 1
+			primaryColor = #CECECE
 			secondaryColor = #999999
 			GAMEOBJECTS 
 			{
@@ -212,8 +218,8 @@ PART
 		VARIANT 
 		{
 			name = truss 2
-			displayName = Truss Variant 2
-			primaryColor = #3a562a
+			displayName = #MEV-variant-2 // Truss Variant 2
+			primaryColor = #3A562A
 			secondaryColor = #999999
 			GAMEOBJECTS 
 			{
@@ -224,8 +230,8 @@ PART
 		VARIANT 
 		{
 			name = bothTruss
-			displayName = Truss Variant 3
-			primaryColor = #3a562a
+			displayName = #MEV-variant-3 // Truss Variant 3
+			primaryColor = #3A562A
 			secondaryColor = #999999
 			GAMEOBJECTS 
 			{
@@ -236,9 +242,9 @@ PART
 		VARIANT 
 		{
 			name = noTruss
-			displayName = No Truss
+			displayName = #MEV-variant-4 // No Truss
 			primaryColor = #999999
-			secondaryColor = #cecece
+			secondaryColor = #CECECE
 			GAMEOBJECTS 
 			{
 				Truss1 = false
@@ -264,5 +270,13 @@ PART
 		method = FIXED_JOINT
 		crossfeed = True
 		rigid = False
+	}
+
+	DRAG_CUBE
+	{
+		cube = 0, 55.17,0.7031,7.482, 55.17,0.7032,7.308, 77.62,0.7345,8.245, 77.62,0.6458,8.844, 54.67,0.7111,6.945, 54.65,0.7083,6.891, 0.06897,-5.003,0.03982, 14.59,11.55,13.64
+		cube = 1, 55.02,0.7182,6.322, 55.02,0.7182,6.372, 77.57,0.7659,8.221, 77.57,0.6456,5.481, 55.02,0.7194,6.372, 55.02,0.7172,6.322, 0,-3.339,0, 12.49,8.119,12.49
+		cube = 2, 56.42,0.7105,7.482, 56.42,0.7103,7.308, 77.62,0.761,8.245, 77.62,0.6458,8.844, 55.97,0.7179,6.945, 55.94,0.7151,6.891, 0.06897,-5.003,0.03982, 14.59,11.55,13.64
+		cube = 3, 53.38,0.7092,6.322, 53.38,0.7091,6.322, 77.57,0.7403,8.221, 77.57,0.6456,5.481, 53.38,0.7105,6.322, 53.38,0.708,6.322, 0,-3.339,0, 12.49,8.119,12.49
 	}
 }
