--- a/GameData/MEVHeavyIndustries/Parts/mev-DaedalusDrive.cfg
+++ b/GameData/MEVHeavyIndustries/Parts/mev-DaedalusDrive.cfg
@@ -15,7 +15,7 @@ PART
 	// mesh = DaedalusDrive.mu
 	MODEL
 	{
-		model = MEVHeavyIndustries/Assets/BussardFusion
+		model = MEVHeavyIndustries/Assets/DaedalusDrive
 	}
 	scale = 1.0
 	rescaleFactor = 1.0
@@ -210,12 +210,18 @@ PART
 
 	MODULE
 	{
+		name = ModuleCargoPart
+		packedVolume = -1
+	}
+
+	MODULE
+	{
 		name = ModulePartVariants
 		baseVariant = Truss 1
 		VARIANT
 		{
 			name = truss 1
-			displayName =  Truss Variant 1
+			displayName = #MEV-variant-1 // Truss Variant 1
 			primaryColor = #cecece
 			secondaryColor = #999999
 			GAMEOBJECTS
@@ -227,7 +233,7 @@ PART
 		VARIANT
 		{
 			name = truss 2
-			displayName =  Truss Variant 2
+			displayName = #MEV-variant-2 // Truss Variant 2
 			primaryColor = #3a562a
 			secondaryColor = #999999
 			GAMEOBJECTS
@@ -239,7 +245,7 @@ PART
 		VARIANT
 		{
 			name = bothTruss
-			displayName =  Truss Variant 3
+			displayName = #MEV-variant-3 // Truss Variant 3
 			primaryColor = #3a562a
 			secondaryColor = #999999
 			GAMEOBJECTS
@@ -251,7 +257,7 @@ PART
 		VARIANT
 		{
 			name = noTruss
-			displayName = No Truss
+			displayName = #MEV-variant-4 // Truss Variant 4
 			primaryColor = #999999
 			secondaryColor = #cecece
 			GAMEOBJECTS
@@ -265,9 +271,9 @@ PART
 	MODULE
 	{
 		name = ModuleResourceConverter
-		ConverterName = FusionPellets Creator
-		StartActionName = Start FusionPellets manufacturing
-		StopActionName = Stop FusionPellets manufacturing
+		ConverterName = #MEV-converter-name // FusionPellets Creator
+		StartActionName = #MEV-converter-strt // Start FusionPellets manufacturing
+		StopActionName = #MEV-converter-stop // Stop FusionPellets manufacturing
 		EfficiencyBonus = 10
 
 		INPUT_RESOURCE
@@ -313,5 +319,13 @@ PART
 		method = FIXED_JOINT
 		crossfeed = True
 		rigid = False
+	}
+
+	DRAG_CUBE
+	{
+		cube = 0, 55.17,0.7031,7.482, 55.17,0.7032,7.308, 77.62,0.7345,8.245, 77.62,0.6458,8.844, 54.67,0.7111,6.945, 54.65,0.7083,6.891, 0.06897,-5.003,0.03982, 14.59,11.55,13.64
+		cube = 1, 55.02,0.7182,6.322, 55.02,0.7182,6.372, 77.57,0.7659,8.221, 77.57,0.6456,5.481, 55.02,0.7194,6.372, 55.02,0.7172,6.322, 0,-3.339,0, 12.49,8.119,12.49
+		cube = 2, 56.42,0.7105,7.482, 56.42,0.7103,7.308, 77.62,0.761,8.245, 77.62,0.6458,8.844, 55.97,0.7179,6.945, 55.94,0.7151,6.891, 0.06897,-5.003,0.03982, 14.59,11.55,13.64
+		cube = 3, 53.38,0.7092,6.322, 53.38,0.7091,6.322, 77.57,0.7403,8.221, 77.57,0.6456,5.481, 53.38,0.7105,6.322, 53.38,0.708,6.322, 0,-3.339,0, 12.49,8.119,12.49
 	}
 }
