--- a/GameData/MEVHeavyIndustries/Parts/mev-EpsteinDrive.cfg
+++ b/GameData/MEVHeavyIndustries/Parts/mev-EpsteinDrive.cfg
@@ -15,7 +15,7 @@ PART
 	// mesh = EpsteinDrive.mu
 	MODEL
 	{
-		model = MEVHeavyIndustries/Assets/BussardFusion
+		model = MEVHeavyIndustries/Assets/EpsteinDrive
 	}
 	scale = 1.0
 	rescaleFactor = 1.0
@@ -133,9 +133,9 @@ PART
 	{
 		name = MultiModeEngine
 		primaryEngineID = LiquidFuel
-		primaryEngineModeDisplayName = LiquidFuel
+		primaryEngineModeDisplayName = #MEV-EpsteinDrive-MME-primary-name // Mode: LiquidFuel
 		secondaryEngineID = Overdrive
-		secondaryEngineModeDisplayName = Overdrive
+		secondaryEngineModeDisplayName = #MEV-EpsteinDrive-MME-secondary-name // Mode: Overdrive
 	}
 	MODULE 
 	{
@@ -214,6 +214,13 @@ PART
 		falloff = 1.75
 		thrustTransformName = thrustTransform
 	}
+
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = -1
+	}
+
 	MODULE 
 	{
 		name = ModulePartVariants
@@ -221,7 +228,7 @@ PART
 		VARIANT 
 		{
 			name = No Boatail
-			displayName = No Boatail
+			displayName = #MEV-variant-5 // No Boattail
 			primaryColor = #222222
 			secondaryColor = #363636
 			GAMEOBJECTS 
@@ -236,7 +243,7 @@ PART
 		VARIANT 
 		{
 			name = Boatail
-			displayName = Boatail
+			displayName = #MEV-variant-6 // Boattail
 			primaryColor = #666666
 			secondaryColor = #363636
 			GAMEOBJECTS 
@@ -251,7 +258,7 @@ PART
 		VARIANT 
 		{
 			name = Blank
-			displayName = Blank
+			displayName = #MEV-variant-7 // Blank
 			primaryColor = #545454
 			secondaryColor = #666666
 			GAMEOBJECTS 
@@ -281,5 +288,12 @@ PART
 		method = FIXED_JOINT
 		crossfeed = True
 		rigid = False
+	}
+
+	DRAG_CUBE
+	{
+		cube = 0, 56.42,0.7105,7.482, 56.42,0.7103,7.308, 77.62,0.761,8.245, 77.62,0.6458,8.844, 55.97,0.7179,6.945, 55.94,0.7151,6.891, 0.06897,-5.003,0.03982, 14.59,11.55,13.64
+		cube = 1, 56.42,0.7105,7.482, 56.42,0.7103,7.308, 77.62,0.761,8.245, 77.62,0.6458,8.844, 55.97,0.7179,6.945, 55.94,0.7151,6.891, 0.06897,-5.003,0.03982, 14.59,11.55,13.64
+		cube = 2, 53.38,0.7092,6.322, 53.38,0.7091,6.322, 77.57,0.7403,8.221, 77.57,0.6456,5.481, 53.38,0.7105,6.322, 53.38,0.708,6.322, 0,-3.339,0, 12.49,8.119,12.49
 	}
 }
