--- a/GameData/MEVHeavyIndustries/Parts/mev-EpsteinDriveV4.cfg
+++ b/GameData/MEVHeavyIndustries/Parts/mev-EpsteinDriveV4.cfg
@@ -15,7 +15,7 @@ PART
 	// mesh = EpsteinDriveV4.mu
 	MODEL
 	{
-		model = MEVHeavyIndustries/Assets/BussardFusion
+		model = MEVHeavyIndustries/Assets/EpsteinDriveV4
 	}
 	scale = 1.0
 	rescaleFactor = 1.0
@@ -109,9 +109,9 @@ PART
 	{
 		name = MultiModeEngine
 		primaryEngineID = Cruise
-		primaryEngineModeDisplayName = Cruise Mode
+		primaryEngineModeDisplayName = #MEV-EpsteinDriveV4-MME-primary-name // Mode: Cruise
 		secondaryEngineID = Overdrive
-		secondaryEngineModeDisplayName = Overdrive Mode
+		secondaryEngineModeDisplayName = #MEV-EpsteinDriveV4-MME-secondary-name // Mode: Overdrive
 	}
 
 	MODULE 
@@ -194,6 +194,12 @@ PART
 		thrustTransformName = thrustTransform
 	}
 
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = -1
+	}
+
 	NODE 
 	{
 		name = top
@@ -211,5 +217,10 @@ PART
 		method = FIXED_JOINT
 		crossfeed = True
 		rigid = False
+	}
+
+	DRAG_CUBE
+	{
+		cube = Default, 56.42,0.7105,7.482, 56.42,0.7103,7.308, 77.62,0.761,8.245, 77.62,0.6458,8.844, 55.97,0.7179,6.945, 55.94,0.7151,6.891, 0.06897,-5.003,0.03982, 14.59,11.55,13.64
 	}
 }
